--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,6 +17,7 @@ security:
         main:
             anonymous: ~
             provider: our_db_provider
+            user_checker: App\Security\UserChecker
 
             # activate different ways to authenticate
 
