--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "guzzlehttp/guzzle": "^6.3",
         "php-amqplib/php-amqplib": "^2.7",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "*",
